--- a/format.css
+++ b/format.css
@@ -3,7 +3,7 @@ you have to change them at some point*/
 
 body {
   font-family:Georgia, 'Times New Roman', Times, serif;
-  background-color: #635851;
+  background-color: #fdc482;
   text-align: center;
   padding: 0%;
   display: flex;
@@ -17,13 +17,23 @@ button {
   font-family:Georgia, 'Times New Roman', Times, serif; /*feel free to change*/
   padding: 10px 16px;
   margin-top: 10px;
-  border: black 2px;
+  border: #003a79 2px;
   border-radius: 8px;
-  background-color: #81716a; /*god please change this color*/
-  color:black; 
+  background-color: #6a72a3;
+  color:#003a79; 
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #ad9a91;
+  background-color: #da7280;
+}
+
+h1 {
+  color: #003a79;
+  font-size: 36px;
+}
+
+p {
+  color: #003a79;
+  font-size: 18px;
 }
