--- a/format.css
+++ b/format.css
@@ -13,6 +13,15 @@ body {
   margin: 0px;
 }
 
+.text {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  gap: 20px;
+  padding: 10px;
+  width: 90%;
+}
+
 .doble-gird {
   display: grid;
   grid-template-columns: 1fr 1fr;
