--- a/format.css
+++ b/format.css
@@ -70,3 +70,28 @@ p {
   color: #003a79;
   font-size: 18px;
 }
+
+#generatePromptBtn {
+  margin-top: 10px;
+}
+
+#submittedScreen {
+  display: none;
+  text-align: center;
+}
+
+#submittedScreen h2 {
+  color: #003a79;
+  font-size: 32px;
+}
+
+#submittedScreen .success-message {
+  font-size: 18px;
+  margin: 30px 0;
+}
+
+#submittedScreen .success-subtext {
+  font-size: 16px;
+  margin-bottom: 30px;
+  color: #666;
+}
