--- a/format.css
+++ b/format.css
@@ -16,6 +16,7 @@ body {
 .text {
   display: grid;
   grid-template-columns: 1fr;
+  justify-content: center;
   align-items: center;
   gap: 20px;
   padding: 10px;
@@ -25,13 +26,14 @@ body {
 .doble-gird {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  justify-content: center;
   align-items: center;
-  background-color: #8a7c73;
+  /*background-color: #8a7c73;*/ /*i cant lie this color makes me mad*/
   gap: 20px;
   padding: 10px;
   border-radius: 20px;
   border: none;
-  width: 90%;
+  width: 80%;
 }
 
 button {
@@ -98,4 +100,14 @@ p {
   font-size: 16px;
   margin-bottom: 30px;
   color: #666;
+}
+
+input {
+    color: black;
+    height: 40px;
+    width: 400px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    margin: 5px;
+    background-color: #ffe6c9;
 }
