--- a/format.css
+++ b/format.css
@@ -30,7 +30,7 @@ body {
   padding: 10px;
   border-radius: 20px;
   border: none;
-  width: 80%;
+  width: fit-content;
 }
 
 button {
@@ -66,7 +66,7 @@ h1 {
   text-align: center;
 }
 
-h2 {
+h2, h3 {
   color: #003a79;
   text-align: center;
 }
